<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/jugando"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_nomUsuario"
        android:layout_width="149dp"
        android:layout_height="46dp"
        android:layout_marginStart="260dp"
        android:layout_marginLeft="260dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/et_usuario"
        android:inputType="textEmailAddress"
        android:textColorHint="#090101"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="145dp"
        android:layout_height="44dp"
        android:layout_marginStart="264dp"
        android:layout_marginLeft="264dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/et_contraseña"
        android:inputType="numberPassword"
        android:textColorHint="#070202"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nomUsuario" />

    <Button
        android:id="@+id/bt_registrar"
        android:layout_width="118dp"
        android:layout_height="66dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="416dp"
        android:onClick="registrar"
        android:text="@string/bt_registrar"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <Button
        android:id="@+id/bt_ingresar"
        android:layout_width="118dp"
        android:layout_height="66dp"
        android:layout_marginTop="416dp"
        android:onClick="ingresar"
        android:text="@string/bt_ingresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

</android.support.constraint.ConstraintLayout>